refactor: 아이덴티티 변경 QA